# archeion

./: .changelog-config.yaml  .composition.yaml  .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  azure-pipelines.yml  conftest.py  manage.py  migrate_archivebox.py  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/: ISSUE_TEMPLATE.md
archeion/: __init__.py  add.py  archive.py  autocast.py  checks.py  config.py  dependency.py  exceptions.py  json2html.py  logging.py  package.json  post_process.py  stopwords.py  utils.py
archeion/archivers/: __init__.py  dom.py  git.py  headers.py  pdf.py  screenshot.py  singlefile.py  webdriver.py  wget.py  youtubedl.py
archeion/cli/: __init__.py
archeion/index/: __init__.py  admin.py  apps.py  forms.py  maintenance.py  missing_artifacts.py  model_functions.py  models.py  setup.py  storage.py  tables.py  views.py
archeion/index/management/: __init__.py
archeion/index/migrations/: 0001_initial.py  0002_artifact_extracted_from.py
archeion/index/tests/: factories.py
archeion/parsers/: __init__.py  generic_feed.py  generic_html.py  generic_text.py
archeion/post_processors/: __init__.py  dandelion.py  html.py  markdown.py
archeion/post_processors/html_metadata/: __init__.py  custom_extract.py  github.py  html.py  jsonld.py  microdata.py  opengraph.py  twitter.py
archeion/search/: __init__.py  utils.py
archeion/search/backends/: ripgrep.py  sonic.py
archeion/static/css/: project.css
archeion/templates/: base.html  base_flex.html
archeion/templates/includes/: _heading.html  _link_accordion.html  _link_tabs.html  _navigation.html  _progressbar.html  footer.html  head.html  nav.html  navigation.html
archeion/templates/index/: artifact_detail.html  link_detail.html  links.html  public_index.html
archeion/users/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
archeion/users/migrations/: 0001_initial.py
archeion/users/tests/: factories.py  test_admin.py  test_models.py  test_urls.py  test_views.py
config/: asgi.py  urls.py  websocket.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docsrc/: Makefile  api.rst  cli.rst  conf.py  index.md  make.bat  usage.md
requirements/: dev.in  dev.txt  docs.txt  prod.in  prod.txt  test.in  test.txt
tests/: __init__.py  test_add.py  test_archiving.py  test_autocast.py  test_json2html.py  test_utils.py
tests/fixtures/: blog.html  blog_with_base_tag.html  bookmark-export.html  example.rss.xml  url-list.txt
tests/fixtures/html-metadata/: all.html  all.json  basic.md  csstricks.html  csstricks.json  github.html  github.json  medium.html  medium.json  missing-data.json  multiple-og.html  multiple-og.json  uxcollective.html  uxcollective.json  yoast.html  yoast.json  yoast2.html  yoast2.json
tests/test_archivers/: test_dom.py
tests/test_parsers/: test_generic_feed.py  test_generic_html.py  test_generic_text.py  test_init.py
tests/test_post_processors/: normalized_data.py  test_extract_metadata.py  test_github.py  test_html.py  test_jsonld.py  test_microdata.py  test_opengraph.py  test_twitter.py
tests/test_post_processors/cassettes/: test_normalize_jsonld[medium].yaml  (+2 more)
(+7 files in other folders)
